# site

./: .bazelignore  .bazelrc  .firebaserc  BUILD.bazel  WORKSPACE  firebase.json  package-lock.json  package.json  tsconfig.json
.buildkite/: Dockerfile  bazel.rc  pipeline.yaml
docs/: readme.md
docs/content/: BUILD.bazel
docs/content/additionals/: BUILD.bazel  access-control-rules.md  bucket-module-types.md  query-params.md
docs/content/api/: BUILD.bazel
docs/content/concept/: BUILD.bazel  asset-store.md  bucket.md  cli.md  composer.md  dashboard.md  function.md  l10n.md  passport.md  spica-devkit.md  storage.md  user-activities.md  webhook.md
docs/content/guide/: BUILD.bazel  contributing.md  index.md  introduction.md  open-source-build.md  user-register-login.md
docs/content/libraries/: BUILD.bazel  bucket-module.md  database-module.md  identity-module.md  storage-module.md
docs/content/modules/: BUILD.bazel  bucket-module.md  database-module.md  identity-module.md  query-params.md  storage-module.md
docs/content/pro/: BUILD.bazel  cloud-functions.md  user-as-content.md
docs/content/start/: BUILD.bazel  getting-started.md  installation.md  where-to-start.md
docs/site/: BUILD.bazel  angular.json  package-lock.json  package.json
docs/site/src/app/: app-routing.module.ts  app.module.ts
docs/site/src/app/components/footer/: footer.component.html  footer.component.scss  footer.component.ts
docs/site/src/app/components/header/: header.component.html
docs/site/src/app/components/pricing-table/: pricing-table.component.html  pricing-table.component.scss  pricing-table.component.ts
docs/site/src/app/interface/: partner.ts
docs/site/src/app/services/: doc.service.ts  plans.service.ts
docs/site/src/assets/: plans.json
tools/dgeni/: dgeni.ts
(+18 files in other folders)
