package(default_visibility = ["//visibility:public"])

load("//tools/dgeni:index.bzl", "docs")

docs(
    name = "content",
    # buildifier: leave-alone
    data = [
        "//docs/content/start",
        "//docs/content/concept",
        "//docs/content/modules",
        "//docs/content/guide",
        "//docs/content/additionals",
        "//docs/content/pro",
        # "//docs/content/api",
    ],
)
