package(default_visibility = ["//visibility:public"])

load("//tools/dgeni:index.bzl", "docs")

docs(
    name = "content",
    # buildifier: leave-alone
    data = [
        "//docs/content/start",
        "//docs/content/concept",
        "//docs/content/additionals",
        "//docs/content/libraries",
        "//docs/content/guide",
        "//docs/content/pro",
        # "//docs/content/api",
    ],
)
