package(default_visibility = ["//visibility:public"])

load("//tools/dgeni:index.bzl", "docs")

docs(
    name = "concept",
    # buildifier: leave-alone
    srcs = [
        "index.md",
        "bucket.md",
        "passport.md",
        "function.md",
        "storage.md",
        "dashboard.md",
        "user-activities.md",
        "webhook.md",
        "l10n.md",
        "cli.md",
        "spica-devkit.md",
    ],
)
