package(default_visibility = ["//visibility:public"])

load("//tools/dgeni:index.bzl", "docs")

docs(
    name = "modules",
    # buildifier: leave-alone
    srcs = [
        "query-params.md",
        "bucket-module.md",
        "database-module.md",
        "identity-module.md",
        "storage-module.md",
    ],
)
